# alloy

./: Makefile  README.md  alloy.opam  config.example.json  dune-project  rules.example.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deb.yml
debian/: alloy.json  alloyd.postinst  changelog  rules
extension/: add_rule_page.ml  bridge.ml  bridge.mli  bridge_protocol.ml  chrome_api.ml  chrome_api.mli  config.html  config_page.ml  dune  history_panel.html  history_panel.ml  main.ml  manifest.json  multiplexer.ml  multiplexer.mli  page_util.ml  popup.html  popup.ml
extension/__tests__/: chrome_mock.js  multiplexer.test.js  navigation.test.js  popup.test.js
lib/bridge_protocol/: bridge_protocol.ml  dune
lib/cidr/: cidr.ml  dune
lib/client/: client.ml  client.mli  dune
lib/constants/: constants.ml  dune
lib/history/: dune  history.ml
lib/log/: log.ml
lib/protocol/: dune  protocol.ml  protocol.mli
test/: integration.js
test/client_test/: client_test.ml  dune  tcp_transport.ml  test_harness.ml
